--- a/index.html
+++ b/index.html
@@ -1,12 +1,141 @@
 <html>
 <head>
-<script src="javascripts/three.min.js" type="text/javascript"></script>
-</head>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="public/javascript/three.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="public/javascript/threex.laserbeam.js"></script>
+    <script type="text/javascript" type="text/javascript" src="public/javascript/xeblaster_terrain.js"></script>  
+    <script type="text/javascript" type="text/javascript" src="public/javascript/xeblaster_objects.js">  </script>
+    <script type="text/javascript" type="text/javascript" src="public/javascript/xeblaster_explosions.js">  </script>
+    <script type="text/javascript" type="text/javascript" src="public/javascript/xeblaster_player.js">  </script>
+    <script type="text/javascript" type="text/javascript" src="public/javascript/xeblaster2.js">  </script>
+    <link rel="stylesheet", href="public/css/game.css"/>
 
+    <audio id="theme_song_1" autobuffer style="display:none;" src="public/sound/7OOP3D_-_Deranged_Connection.mp3"></audio>
+    <audio id="theme_song_2" autobuffer style="display:none;" src="public/sound/destinazione_altrove_-_It_s_Time.mp3"></audio>
+    <audio id="theme_song_3" autobuffer style="display:none;" src="public/sound/destinazione_altrove_-_Kalte_Ohren_(_Remix_).mp3"></audio>
+    <audio id="theme_song_4" autobuffer style="display:none;" src="public/sound/cyba_-_yellow.mp3"></audio>
+    </head>
 <body>
-<div id="mainwindow" style="width:100%;height:100%;minwidth:1920px;">
 
+<div class="containerdiv">
+    <div id="playdiv" class="playdiv">
+        <div class="scorediv">
+            <p style="margin-bottom:1px;text-align:center;color:white;">XeBlaster</p>
+            <p style="margin-top:1px;text-align:center;color:white;">2</p>
+            <hr style='background-color:white;width:90%'>
+            <div class='progress' id="scorebar_red_bg" style="left:20%">
+                <div class='progress-bar' id='scorebar_red' 
+                    role="progressbar" style="background-color:0x3333ff" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+            </div>
+            <div class='progress' style="left: 65%;">
+                <div class='progress-bar bg-primary' id='scorebar_blue' 
+                    role="progressbar" style="top:50%;height:50%" aria-valuenow="40" 
+                    aria-valuemin="0" aria-valuemax="100">
+                </div>
+            </div>
+            <div style="position:absolute;width:100%;bottom:7%;left:7%;font-size:12px;color:white;">
+                 <span style="position:relative;left:8%">Weapon</span>
+                 <span style="position:absolute;left:57%">Power</span>
+            </div>
+            <div id='score' 
+            style="padding-left:2px;padding-right:2px;position:absolute;bottom:2px;text-align:right;color:white;font-size:16px;">
+            0
+            </div>
+        </div>
+    </div>
 </div>
-</body>
+<div id="reveal-container">
+    <div class="reveal-modal">
+        <h3>XeBlaster 2 (alpha)</h3>
+        <p>
+            The original xeblaster was hidden as an easter egg in the XENON1T data acquisition control
+            system. This is a minor reworking, done as a small project during COVID-19. Yes, it's not
+            very good. But it was fun to make.
+        </p>
+        <p>
+            Move with w, a, s, d. Fire with enter. Pause with backspace. Doesn't work on phones, sorry.
+            Keep the blue bar (energy) filled. You get blue for blowing up the blue guys. You lose blue 
+            for getting hit. Fill the red bar to level the gun. Difficulty rises gradually. Meant to become 
+            impossible at some point.
+        </p>
+        <h3>Credits</h3>
+        <p>
+            ThreeJS (<a href="https://threejs.org/">link</a>) is used at the WebGL frontend. It's great, 
+            check it out. Sound effects are graciously used from <a href="https://freesound.org/">freesound.org</a> 
+            and are left in the sounds folder with their original IDs and lookup tags. Attribution for soundtrack
+            appears below and tracks were sourced from <a href="http://dig.ccmixter.org">dig.ccmixter.org</a>.
+        </p>
+        <div class="attribution-block">
+            <a href="http://dig.ccmixter.org/files/7OOP3D/61316">
+                Deranged Connection</a> by 7OOP3D (c) copyright 2020 Licensed under a Creative Commons 
+                <a href="http://creativecommons.org/licenses/nc-sampling+/1.0/">
+                    Noncommercial Sampling Plus</a> license. Ft: Whitewolf
+        </div>
+        <div class="attribution-block"><a href="http://dig.ccmixter.org/files/destinazione_altrove/59536">Kalte Ohren ( Remix )</a> by Dysfunction_AL (c) copyright 2019 Licensed under a Creative Commons <a href="http://creativecommons.org/licenses/by/3.0/">Attribution (3.0)</a> license. Ft: Starfrosch, Kara Square</div>
+        <div class="attribution-block"><a href="http://dig.ccmixter.org/files/destinazione_altrove/52477">It's Time</a> by Dysfunction_AL (c) copyright 2015 Licensed under a Creative Commons <a href="http://creativecommons.org/licenses/by-nc/3.0/">Attribution Noncommercial  (3.0)</a> license. Ft: Veta Sky</div>
+        <div class="attribution-block"><a href="http://dig.ccmixter.org/files/cyba/60166">yellow</a> by cyba (c) copyright 2019 Licensed under a Creative Commons <a href="http://creativecommons.org/licenses/by-nc/3.0/">Attribution Noncommercial  (3.0)</a> license. </div>
+        <hr>
+        <button class="close-reveal-modal" style="background-color:rgb(57, 226, 57);height:50px;width:200px" onclick="ButtonClick()">Start!</button>
+        &nbsp;
+        <button href="https://github.com/coderdj/xeblaster2" style="float:right;background-color:#5992c2;height:50px;width:200px">See Source on GitHub</button>
 
+    </div>
+</div>
+<script type="text/javascript">
+
+    document.sounds = {
+      'blaster_player': new Audio("public/sound/466867__mikee63__blaster-shot-single-5.wav"),
+      'minihit': new Audio("public/sound/122974__zimbot__blasterincoming.wav"),
+      'littleboom': [
+        new Audio("public/sound/336005__rudmer-rotteveel__sharp-explosion-2-of-5.wav"),
+        new Audio("public/sound/336006__rudmer-rotteveel__sharp-explosion-1-of-5.wav"),
+        new Audio("public/sound/336011__rudmer-rotteveel__sharp-explosion-4-of-5.wav")
+      ],
+      'bigboom': new Audio('public/sound/268557__cydon__explosion-001.mp3'),
+      'whip': new Audio("public/sound/351267__peterbullmusic__mixed-whip-crack-1.wav"),
+      'whoosh': new Audio("public/sound/403973__martian__beast-whoosh.wav")
+    };
+    document.sounds['blaster_player'].volume = .05;
+
+    
+
+    $(document).ready(
+      function(){
+      LoadGame("playdiv");
+      animate();});
+    function ButtonClick(){
+        Reset("playdiv");
+        $("#reveal-container").hide();
+        document.xeblaster_settings['run']=true;
+        document.music_index=0;
+        $("#"+document.music[document.music_index]).currentTime=0;
+        $("#"+document.music[document.music_index]).trigger('play');
+
+        animate();
+    }
+
+    document.music=["theme_song_1", "theme_song_2", "theme_song_3", "theme_song_4"];		  
+      document.music_index = 0;
+    for(var i=0; i<document.music.length; i+=1){
+        document.getElementById(document.music[i]).volume=.2;
+        document.getElementById(document.music[i]).addEventListener('ended', function() {
+            var plus1 = i+1;
+            if(plus1 >= document.music.length) plus1=0;
+            this.pause();
+            this.currentTime=0;
+            document.getElementById(document.music[plus1]).currentTime=0;
+            document.getElementById(document.music[plus1]).play();
+            document.music_index=plus1;
+          }, false);
+    }
+    
+</script>
+
+
+
+</body>
 </html>
